Changed text-muted color for landing.html

--- a/Squad_DEV/css/default.css
+++ b/Squad_DEV/css/default.css
@@ -7049,7 +7049,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: #0a0c0d !important; }
 
 .text-muted {
-  color: #868e96 !important; }
+  color: #404040 !important; }
 
 .text-hide {
   font: 0/0 a;
